# LearnOpenGL

./: .gitignore  CMakeLists.txt
include/glad/: glad.h
shaders/: fs.glsl  vs.glsl
src/: glad.c  glfw.h  includes.h  main.cpp  shader.h
